# aegis

./: AGENTS.md  USECASES.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
app/: main.py
app/api/v1/: orders.py  risk.py  signals.py  strategies.py
app/api/v1/schemas/: __init__.py  orders.py  risk.py  signals.py  strategies.py
app/core/: __init__.py  config.py  lifecycle.py
app/decision/: engine.py  evaluators.py  rules.py
app/domain/: __init__.py  intent.py  order.py  position.py  risk.py  signal.py  strategy.py
app/execution/: engine.py
app/risk/: engine.py  limits.py  projection.py
app/simulation/: engine.py  fills.py  latency.py
app/storage/: unit_of_work.py
app/storage/models/: __init__.py  orders.py  positions.py
app/storage/repositories/: __init__.py  orders.py  positions.py
scripts/: lints.sh
tests/: conftest.py
tests/app/api/v1/: test_signals.py
tests/decision/: test_decision_engine.py
tests/risk/: test_risk_engine.py
tests/simulation/: test_simulation_engine.py
